--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -224,7 +224,7 @@ function calculateAge(bornDate: Date) {
     t("site.description.second")}
 >
   <main class="px-4">
-    <SectionContainer class="lg:pt-44 pt-24 lg:pb-24 pb-12">
+    <SectionContainer class="lg:pt-44 pt-24 lg:pb-24 pb-12" id="start">
       <div class="flex items-center">
         {
           ACTUALSTATUS.text == STATUS.AVAILABLE.text ||
