--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ const { title, description } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content={description} />
@@ -20,7 +20,7 @@ const { title, description } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body>
+  <body class="dark dark:bg-[#282c34]">
     <!-- Background -->
     <!-- <div
       class="absolute top-0 z-[-2] h-screen w-screen bg-white bg-[radial-gradient(100%_50%_at_50%_0%,rgba(0,163,255,0.13)_0,rgba(0,163,255,0)_50%,rgba(0,163,255,0)_100%)]"
@@ -70,9 +70,9 @@ const { title, description } = Astro.props;
     align-items: center;
   }
 
-  /* @media (prefers-reduced-animation: reduce) {
+  @media (prefers-reduced-animation: reduce) {
     body {
       scroll-behavior: auto;
     }
-  } */
+  }
 </style>
