--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -26,11 +26,11 @@ const { date, description, name } = Astro.props;
 </style>
 
 <div
-  class="absolute w-3 h-3 bg-blue-600/80 opacity-50 rounded-full mt-1.5 -start-1.5 border border-white dark:border-blue-600/80 dark:bg-blue-600/8dark:border-blue-600/80"
+  class="absolute w-3 h-3 bg-blue-600/80 opacity-50 rounded-full mt-1.5 -start-1.5 border border-white dark:border-white/100 dark:bg-white/100 dark:opacity-100"
 >
 </div>
 <time
-  class="fadein-animation mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500"
+  class="fadein-animation mb-1 text-sm font-normal leading-none text-gray-400 dark:text-white/80"
   >{date}</time
 >
 <h3
