--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,13 +8,13 @@ const YEAR = getYear();
 ---
 
 <footer
-  class="bg-white rounded-lg m-4 dark:bg-gray-800 w-full xl:w-[1120px] mx-auto"
+  class="bg-white rounded-lg m-4 dark:bg-[#282c34] w-full xl:w-[1120px] mx-auto"
 >
   <div
     class="flex items-center justify-between py-6 w-full mx-auto max-w-screen-xl px-4 gap-x-4"
   >
     <span
-      class="text-sm text-center text-blue-600/80 dark:text-gray-400 border-blue-600/80 border-2 rounded-full w-[150px] py-1 px-2"
+      class="text-sm text-center text-blue-600/80 border-blue-600/80 border-2 rounded-full w-[150px] py-1 px-2"
       >© {YEAR} AleDev
     </span>
     <ul
