--- a/src/components/ProjectItem.astro
+++ b/src/components/ProjectItem.astro
@@ -49,6 +49,29 @@ const { title, description, tags, image, github, link } = Astro.props.project;
     height: 250px;
     transform: translateY(102%);
   }
+  @media (prefers-color-scheme: dark) {
+    .image::before {
+      position: absolute;
+      content: attr(data-label);
+      font-size: 44px;
+      top: 0;
+      left: 0;
+      z-index: 1;
+      border-radius: 0.25rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+      color: white;
+      background: rgba(0, 0, 0, 0.6);
+      opacity: 1;
+      transition: 0.4s;
+    }
+    .image-link:hover .image::before {
+      opacity: 0;
+    }
+  }
 </style>
 <script is:inline>
   function onClickEvent(event) {
@@ -59,20 +82,20 @@ const { title, description, tags, image, github, link } = Astro.props.project;
   <div class="flex gap-y-2 lg:flex-row flex-col lg:place-content-between mb-2">
     <a href={link} target="_blank" class="flex items-center">
       <h3
-        class="text-2xl flex gap-x-2 items-center font-semibold text-blue-600/80 opacity-70 text-pretty"
+        class="text-2xl flex gap-x-2 items-center font-semibold text-blue-600/80 opacity-70 text-pretty dark:text-blue-400"
       >
         {title}
       </h3>
     </a>
     <GitHubBtn href={github} />
   </div>
-  <p class="text-lg mb-4 text-pretty">{description}</p>
+  <p class="text-lg mb-4 text-pretty dark:text-white/80">{description}</p>
   <ul class="flex gap-x-2 gap-y-2 flex-row flex-wrap mb-4">
     {
       tags.map((tag: { name: string; class: string; icon: Function }) => (
         <li>
           <span
-            class={`items-center bg-white flex gap-x-1 rounded-full text-sm py-1 px-2 border-2 ${tag.class}`}
+            class={`items-center bg-white dark:bg-white/90 flex gap-x-1 rounded-full text-sm py-1 px-2 border-2 ${tag.class}`}
           >
             {typeof tag.icon == "function" && <tag.icon class="size-4" />}
             {tag.name}
@@ -88,7 +111,7 @@ const { title, description, tags, image, github, link } = Astro.props.project;
       data-label="»"
     >
       <img
-        class="rounded shadow-2xl shadow-black/50"
+        class="rounded shadow-2xl shadow-white/30"
         src={image}
         alt={`Screenshot project ${title}`}
       />
