--- a/src/components/SocialContainer.astro
+++ b/src/components/SocialContainer.astro
@@ -1,5 +1,5 @@
 <a
-  class="rounded-full border border-black/20 flex justify-center items-center gap-x-2 py-1 px-2 bg-black/5 hover:scale-105 hover:bg-black/10 transition"
+  class="rounded-full border border-black/20 flex justify-center items-center gap-x-2 py-1 px-2 bg-black/5 hover:scale-105 hover:bg-black/10 transition dark:bg-white/80 dark:hover:bg-white/100"
   {...Astro.props}
   target="_blank"
 >
