--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,52 +23,55 @@ const MAIL = "alecuba96@gmail.com";
 const PHONE = "+34 600 96 28 35";
 const yearsOfExpertise = calculateAge(new Date(2018, 8, 1));
 const STATUS = {
-    AVAILABLE: {
-        text: t("site.status.aviable"),
-        class: "bg-blue-100 text-blue-800 dark:bg-blue-900 dark:text-blue-300",
-    },
-    LISTING: {
-        text: t("site.status.listing"),
-        class: "bg-yellow-100 text-yellow-800 dark:bg-yellow-900 dark:text-yellow-300 ",
-    },
-    WORKING: {
-        text: t("site.status.working"),
-        class: "flex bg-red-100 text-red-800 dark:bg-red-900 dark:text-red-300 ",
-    },
+  AVAILABLE: {
+    text: t("site.status.aviable"),
+    class: "bg-blue-100 text-blue-800 dark:bg-blue-900 dark:text-white/80",
+  },
+  LISTING: {
+    text: t("site.status.listing"),
+    class:
+      "bg-yellow-100 text-yellow-800 dark:bg-yellow-900 dark:text-white/80 ",
+  },
+  WORKING: {
+    text: t("site.status.working"),
+    class: "flex bg-red-100 text-red-800 dark:bg-red-900 dark:text-white/80 ",
+  },
 };
 const ACTUALSTATUS = STATUS.AVAILABLE;
 const SOCIALPROFILES = [
-    {
-        href: `https://www.linkedin.com/in/manuel-alejandro-naranjo-rey`,
-        name: "LinkedIn",
-        icon: LinkedInIcon,
-    },
-    {
-        href: `https://github.com/MANR1996`,
-        name: "GitHub",
-        icon: GitHubIcon,
-    },
-    {
-        href: `https://www.researchgate.net/profile/Manuel-Alejandro-Naranjo-Rey`,
-        name: "ResearchGate",
-        icon: ResearchGateIcon,
-    },
-    {
-        href: `mailto:${MAIL}`,
-        name: MAIL,
-        icon: MailIcon,
-    },
+  {
+    href: `https://www.linkedin.com/in/manuel-alejandro-naranjo-rey`,
+    name: "LinkedIn",
+    icon: LinkedInIcon,
+  },
+  {
+    href: `https://github.com/MANR1996`,
+    name: "GitHub",
+    icon: GitHubIcon,
+  },
+  {
+    href: `https://www.researchgate.net/profile/Manuel-Alejandro-Naranjo-Rey`,
+    name: "ResearchGate",
+    icon: ResearchGateIcon,
+  },
+  {
+    href: `mailto:${MAIL}`,
+    name: MAIL,
+    icon: MailIcon,
+  },
 ];
 function calculateAge(bornDate: Date) {
-    bornDate = new Date(bornDate);
-    var actualDate = new Date();
-    var years = actualDate.getFullYear() - bornDate.getFullYear();
-    if (actualDate.getMonth() < bornDate.getMonth() ||
-        (actualDate.getMonth() == bornDate.getMonth() &&
-            actualDate.getDate() < bornDate.getDate())) {
-        years--;
-    }
-    return years;
+  bornDate = new Date(bornDate);
+  var actualDate = new Date();
+  var years = actualDate.getFullYear() - bornDate.getFullYear();
+  if (
+    actualDate.getMonth() < bornDate.getMonth() ||
+    (actualDate.getMonth() == bornDate.getMonth() &&
+      actualDate.getDate() < bornDate.getDate())
+  ) {
+    years--;
+  }
+  return years;
 }
 ---
 
@@ -142,6 +145,15 @@ function calculateAge(bornDate: Date) {
         border-color: black;
       }
     }
+
+    @media (prefers-color-scheme: dark) {
+      @keyframes blink {
+        50% {
+          border-color: white;
+        }
+      }
+    }
+
     @keyframes text-anim {
       0% {
         margin-top: 0;
@@ -223,7 +235,7 @@ function calculateAge(bornDate: Date) {
     yearsOfExpertise +
     t("site.description.second")}
 >
-  <main class="px-4">
+  <main class="px-4 dark:bg-[#282c34]">
     <SectionContainer class="lg:pt-44 pt-24 lg:pb-24 pb-12" id="start">
       <div class="flex items-center">
         {
@@ -238,7 +250,7 @@ function calculateAge(bornDate: Date) {
         }
       </div>
       <h1
-        class="text-black sm:flex block text-2xl/[40px] sm:text-4xl/[50px] md:text-4xl/[70px] lg:text-5xl/[70px] font-bold flex-row gap-x-4 pb-4 whitespace-nowrap"
+        class="text-black sm:flex block text-2xl/[40px] sm:text-4xl/[50px] md:text-4xl/[70px] lg:text-5xl/[70px] font-bold flex-row gap-x-4 pb-4 whitespace-nowrap dark:text-white/80"
       >
         {t("site.presentation.title")}
         <div class="md:h-[70px] sm:h-[50px] h-[40px] overflow-hidden">
@@ -262,12 +274,14 @@ function calculateAge(bornDate: Date) {
         </div>
       </h1>
       <h2
-        class="lg:text-2xl text-xl opacity-50 mb-2 sm:text-nowrap sm:whitespace-nowrap max-w-[700px] typing-animation"
+        class="lg:text-2xl text-xl opacity-50 mb-2 sm:text-nowrap sm:whitespace-nowrap max-w-[700px] typing-animation dark:text-white/100 dark:opacity-80"
       >
-        <span class="text-blue-600/80"
+        <span class="text-blue-600/80 dark:text-blue-400"
           >{yearsOfExpertise} {t("site.years")}</span
         >
-        {t("site.experience.first")}<span class="text-blue-600/80">
+        {t("site.experience.first")}<span
+          class="text-blue-600/80 dark:text-blue-400"
+        >
           {t("site.experience.second")}</span
         >
         <!-- {t("site.location")} -->
@@ -284,7 +298,7 @@ function calculateAge(bornDate: Date) {
     </SectionContainer>
     <SectionContainer id="about" class="mb-24">
       <h2
-        class="opacity-70 text-2xl font-semibold mb-6 flex flex-row items-center gap-x-2"
+        class="opacity-70 text-2xl font-semibold mb-6 flex flex-row items-center gap-x-2 dark:opacity-100 dark:text-white"
       >
         <UserIcon class="size-6" />{t("site.sections.about")}
       </h2>
@@ -292,7 +306,7 @@ function calculateAge(bornDate: Date) {
     </SectionContainer>
     <SectionContainer id="experience" class="mb-24">
       <h2
-        class="opacity-70 text-2xl font-semibold mb-6 flex flex-row items-center gap-x-2"
+        class="opacity-70 text-2xl font-semibold mb-6 flex flex-row items-center gap-x-2 dark:opacity-100 dark:text-white"
       >
         <BriefCaseIcon class="size-6" />{t("site.sections.experience")}
       </h2>
@@ -300,7 +314,7 @@ function calculateAge(bornDate: Date) {
     </SectionContainer>
     <SectionContainer id="projects">
       <h2
-        class="opacity-70 text-2xl font-semibold mb-6 flex flex-row items-center gap-x-2"
+        class="opacity-70 text-2xl font-semibold mb-6 flex flex-row items-center gap-x-2 dark:opacity-100 dark:text-white"
       >
         <CodeIcon class="size-6" />{t("site.sections.projects")}
       </h2>
@@ -308,7 +322,7 @@ function calculateAge(bornDate: Date) {
     </SectionContainer>
     <SectionContainer id="contact" class="mb-24">
       <h2
-        class="opacity-70 text-2xl font-semibold mb-6 flex flex-row items-center gap-x-2"
+        class="opacity-70 text-2xl font-semibold mb-6 flex flex-row items-center gap-x-2 dark:opacity-100 dark:text-white"
       >
         <ContactIcon class="size-6" />{t("site.sections.contact")}
       </h2>
