--- a/src/components/ProjectItem.astro
+++ b/src/components/ProjectItem.astro
@@ -1,5 +1,5 @@
 ---
-import LinkIcon from "./icons/Link.astro";
+// import LinkIcon from "./icons/Link.astro";
 import GitHubBtn from "./GitHubBtn.astro";
 const { title, description, tags, image, github, link } = Astro.props.project;
 ---
