--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -7,7 +7,7 @@ import RemixIcon from "./icons/Remix.astro";
 import TailwindIcon from "./icons/Tailwind.astro";
 import TypeScriptIcon from "./icons/TypeScript.astro";
 import RapidApiIcon from "./icons/RapidApi.astro";
-import AstroIcon from "./icons/Astro.astro";
+import AstroIcon from "./icons/AstroIcon.astro";
 import JavaScriptIcon from "./icons/JavaScript.astro";
 import ProjectItem from "./ProjectItem.astro";
 import { t } from "i18next";
