Added TestApp new project

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -9,6 +9,11 @@ import TypeScriptIcon from "./icons/TypeScript.astro";
 import RapidApiIcon from "./icons/RapidApi.astro";
 import AstroIcon from "./icons/AstroIcon.astro";
 import JavaScriptIcon from "./icons/JavaScript.astro";
+import JestIcon from "./icons/Jest.astro";
+import ReduxIcon from "./icons/Redux.astro";
+import StoryBookIcon from "./icons/StoryBook.astro";
+import StyledComponentsIcon from "./icons/StyledComponents.astro";
+import ViteIcon from "./icons/Vite.astro";
 import ProjectItem from "./ProjectItem.astro";
 import { t } from "i18next";
 const TAGS = {
@@ -67,6 +72,31 @@ const TAGS = {
     class: "text-[#000000] border-[#EE5D0A]",
     icon: AstroIcon,
   },
+  Jest: {
+    name: "Jest",
+    class: "text-[#99425B] border-[#99425B]",
+    icon: JestIcon,
+  },
+  Redux: {
+    name: "Redux",
+    class: "text-[#764ABC] border-[#764ABC]",
+    icon: ReduxIcon,
+  },
+  StoryBook: {
+    name: "StoryBook",
+    class: "text-[#EF4A81] border-[#EF4A81]",
+    icon: StoryBookIcon,
+  },
+  StyledComponents: {
+    name: "StyledComponents",
+    class: "text-[#4A4A4A] border-[#FDD641]",
+    icon: StyledComponentsIcon,
+  },
+  Vite: {
+    name: "Vite",
+    class: "text-[#FFCF27] border-[#FFCF27]",
+    icon: ViteIcon,
+  },
 };
 const PROJECTS = [
   {
@@ -107,6 +137,14 @@ const PROJECTS = [
     image: "/PortfolioProject.webp",
     github: "https://github.com/MANR1996/AleDevPortfolio",
     link: "/",
+  },
+  {
+    title: t("project.fourth.title"),
+    description: t("project.fourth.description"),
+    tags: [TAGS.Vite, TAGS.React, TAGS.Redux, TAGS.Jest, TAGS.StoryBook, TAGS.JavaScript, TAGS.StyledComponents, TAGS.HTML, TAGS.CSS],
+    image: "/TestProject.webp",
+    github: "https://github.com/MANR1996/TestApp",
+    link: "https://tests-app.vercel.app/",
   },
 ];
 ---
